day7 wrong answer?

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,9 @@
       "cargo": {
         "args": [
           "run",
-          "--bin=Advent_of_Code_2024"
+          "--bin=Advent_of_Code_2024",
+          "--", 
+          "day7"
         ]
       },
       "args": []
